	* src/resources/monsterdb.cpp, src/resources/monsterinfo.cpp,
	src/resources/monsterinfo.h, src/resources/spritedef.h: Actions and
	particle effect for monster attacks are now obtained from the monster
	database.
	* data/monsters.xml, data/graphics/sprites/scorpion.cpp,
	data/graphics/sprites/scorpion.xml: Gave the tail attack of the
	scorpion a custom animation and a particle effect.

2008-03-07  Eugenio Favalli  <elvenprogrammer@themanaworld.org>

	* data/equipment.xml, data/graphics/items/armor-legs-chaps.png,
	data/graphics/items/armour-head-cowboyblack.png,
	data/graphics/items/armour-head-cowboywhite.png,
	data/graphics/items/generic-snakeskin.png,
	data/graphics/sprites/head-cowboyblack.png,
	data/graphics/sprites/head-cowboyblack.xml,
	data/graphics/sprites/head-cowboywhite.png,
	data/graphics/sprites/head-cowboywhite.xml,
	data/graphics/sprites/leg-chaps-female.png,
	data/graphics/sprites/leg-chaps-female.xml,
	data/graphics/sprites/leg-chaps-male.png,
	data/graphics/sprites/leg-chaps-male.xml,
	data/graphics/sprites/monster-snake.png,
	data/graphics/sprites/monster-snake.xml,
	data/graphics/sprites/npcs.png, data/items.xml, data/monsters.xml:
	Added new items by Black Don, new xml definitions by Peavey.
	* data/graphics/items/armor-head-cowboyblack.png,
	data/graphics/items/armor-head-cowboywhite.png: Corrected names.

2008-03-06  David Athay  <ko2fan@gmail.com>

	* src/net/guildhandler.cpp, src/net/guildhandler.hpp: Fixed
	rejoining guilds after quitting.

2008-03-05  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/guildwindow.cpp: Fixed key presses during text
	dialog in guild window and changed license to standard GPL.
	* src/localplayer.cpp, src/localplayer.h, src/player.cpp,
	src/player.h, src/gui/guildwindow.cpp, src/net/guildhandler.cpp: Fixed
	guild creation.

2008-03-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt, data/graphics/gui/CMakeLists.txt,
	data/fonts/CMakeLists.txt, data/CMakeLists.txt: Accepted patch by